--- a/frontend/auth_config.json
+++ b/frontend/auth_config.json
@@ -1,7 +1,10 @@
 {
     "domain": "dev-revathi.us.auth0.com",
-    "clientId": "W16N7uFi6mLQAOdU7FoUwRJPbcUDUO9l",
+    "clientId": "gydpw41uES82u9iOTmZGlFg7kYGeGPNG",
     "apiUri": "http://localhost:5000",
     "appUri": "http://localhost:4200",
-    "errorPath": "/error"
+    "errorPath": "/error",
+    "audience": "https://dev-revathi.us.auth0.com/api/v2/",
+    "scope": "openid profile email",
+    "response_type": "token id_token code"
 }
