--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "db-migrate-pg": "^1.3.0",
     "dotenv": "^16.1.3",
     "express": "^4.17.1",
+    "express-oauth2-jwt-bearer": "^1.5.0",
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.5.1",
     "typescript": "^5.1.3"
