--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node ./dist/server.js",
-    "migrate": "db-migrate --env test up && db-migrate up",
+    "migrate": "db-migrate up",
     "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess \"node ./dist/server.js\"",
     "lint": "eslint -c .eslintrc \"src/**/*.ts\"",
     "prettier": "prettier --config .prettierrc \"src/**/*.ts\" --write"
@@ -14,7 +14,6 @@
   "author": "Revathi",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "db-migrate": "^0.11.13",
@@ -22,17 +21,13 @@
     "dotenv": "^16.1.3",
     "express": "^4.17.1",
     "express-oauth2-jwt-bearer": "^1.5.0",
-    "jsonwebtoken": "^9.0.0",
     "pg": "^8.5.1",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.9",
-    "@types/jsonwebtoken": "^9.0.2",
     "@types/pg": "^7.14.7",
-    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
     "eslint": "^8.42.0",
